Post-v3.4.0
--------------------
   - Userspace datapath:
     * The default zone limit, if set, is now inherited by any zone
       that does not have a specific value defined, rather than being
       treated as a global value, aligning the behavior with that of
       the kernel datapath.
   - Python:
     * Added tool called "ovs-flowviz" capable of parsing OpenFlow
       and datapath flow dumps and displaying them in several different
       formats.
   - DPDK:
     * OVS validated with DPDK 23.11.2.


v3.4.0 - 15 Aug 2024
--------------------
   - Option '--mlockall' now only locks memory pages on fault, if possible.
     This also makes it compatible with vHost Post-copy Live Migration.
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
     * 'dpif/show' and 'list-commands' now support output in JSON format.
     * Added 'ofproto/detrace' command that outputs the set of OpenFlow rules
       and groups that contributed to the creation of a specific datapath flow.
   - ovs-vsctl:
     * Added a new filter column in the Mirror table which can be used to
       apply filters to mirror ports.
   - ovs-tcpdump:
     * Added command line parameter --filter to enable filtering the packets
       that are captured by tcpdump.
   - Userspace datapath:
     * Conntrack now supports 'random' flag for selecting ports in a range
       while natting and 'persistent' flag for selection of the IP address
       from a range.
     * IPv6 UDP tunnel encapsulation including Geneve and VXLAN will now
       honour the csum option.  Configuring the interface with
       "options:csum=false" now has the same effect as the udp6zerocsumtx
       option has with Linux kernel UDP tunnels.
   - The primary development branch has been renamed from 'master' to 'main'.
     The OVS tree remains hosted on GitHub.