@@ -5,6 +5,8 @@ Post-v3.4.0
        that does not have a specific value defined, rather than being
        treated as a global value, aligning the behavior with that of
        the kernel datapath.
+   - Linux TC offload:
+     * Add support for matching tunnel flags if the kernel supports it.
    - Python:
      * Added tool called "ovs-flowviz" capable of parsing OpenFlow
        and datapath flow dumps and displaying them in several different
